--- a/index copy.html
+++ b/index copy.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>index</title>
+    <title>index copy</title>
     <script src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="style copy.css">
   </head>
