--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Towers of Hanoi</h1>
-    <!-- <button onclick="resetBoard(this)" type="button" class="btn btn-primary btn-lg" name="button">Restart</button> -->
+    <button onclick="resetBoard()" type="button" class="btn btn-primary btn-lg" name="button">Restart</button>
     <hr/>
     <div id="container">
       <div id="top-row" data-row="top" class="red row" onclick="selectRow(this)">
